# gem-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  HTTPS_SETUP.md  PLAN.md  README.md  docker-compose.yml
certs/: api-cert.pem  api-key.pem
config/: proxy.yaml  proxy.yaml.example  proxy.yaml.secure
docs/: API.md  API_Reference.md  Quick_Start_Guide.md  README.md  UI_Design_Standards.md  persistence_integration.md  persistence_usage_example.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
monitoring/: alert_rules.yml  prometheus.yml
scripts/: backup.sh  deploy.sh  monitor.sh  quickstart.sh  test_weight_api.sh  verify-https.sh
src/: integration_example.rs  main.rs
src/api/: auth.rs  config.rs  handlers.rs  intelligent_optimization.rs  load_balancing_stats.rs  mod.rs  weight_audit.rs  weight_management.rs  weight_tools.rs
src/auth/: handler.rs
src/config/: mod.rs  settings.rs  validation.rs
src/error/: context.rs  logging.rs  migration.rs  mod.rs  recovery.rs
src/load_balancer/: audit.rs  key_manager.rs  mod.rs  optimizer.rs  tools.rs  unified_key_manager.rs  weighted_round_robin.rs
src/metrics/: collector.rs  mod.rs
src/persistence/: config_history.rs  mod.rs  session_store.rs  storage.rs  weight_presets.rs
src/proxy/: acme_service.rs  mod.rs  service.rs
src/security/: access_control.rs  audit_logging.rs  config_security.rs  key_management.rs  mod.rs
src/utils/: error.rs  health_check.rs  mod.rs  performance.rs  tls.rs
(+30 files in other folders)
