[package]
name = "gemini-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.5.0", features = ["proxy"] }
pingora-error = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0"
async-trait = "0.1.80"
jsonwebtoken = "9.3.0"
prometheus = { version = "0.14.0", features = ["process"] }
warp = { version = "0.3.7", features = ["tls"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
rcgen = "0.13.1"

acme-lib = "0.5.2"
openssl = "0.10.64"
rand = "0.8"
argon2 = "0.5"
thiserror = "1.0"
tempfile = "3.8"
hostname = "0.3"
base64 = "0.21"
